<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Existing string resource (if any) -->
    <string name="app_name">CalcMaster</string>
    <string name="Addition">+</string>
    <string name="Calculator">Calculator</string>
    <string name="Enter_number">Enter_number</string>
    <string name="one">1</string>
    <string name="fullclear">AC</string>
    <string name="delete">del</string>
    <string name="divide">/</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiple">*</string>
    <string name="equalto">=</string>
    <string name="zero">0</string>

</resources>
